# grid

./: .gitignore  Grid_01.grid  LICENSE  README.md  build.js  canvas-renderer.js  extract-shell.js  package.json  run_all_output.txt  test_output.txt  test_text_output.txt
DOCS/: ACTION-PLAN.md  ARCHITECTURE.md  TASK.md
DOCS/handovers/: PHASE-0.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PHASE-6.md
DOCS/plans/: 2026-02-18-phase-0-implementation.md  2026-02-18-phase-0-plan.md  2026-02-25-phase-1-implementation.md  (+11 more)
local-files/: Creative_Showcase_-_Digital_Garden.grid  Q1-7.md  brief.md  log.md  terms.md
music2grid/: PLAN.md  README.md  main.py  music2grid.py  progression.grid  pyproject.toml  requirements.txt  tacos.grid  test_audio.grid  test_chord.grid  test_scale.grid  track.grid
schemas/: grid-spec-v0.1.0.md  grid.schema.json  package-lock.json  package.json  validate-examples.js
scripts/: create-cinematic-demo.js  create-demos.js  fix-app-js-generators.ps1  generate-icons.js  make-doxascope.mjs  migrate-to-build.ps1
tests/: README.md  run-all.js  test-circuit-breaker.js  test-fs-access.js  test-gemini-bridge.js  test-generators.js  test-gltf-exporter.js  test-grid-core-old.js  test-grid-core.js  test-grid-describer.js  test-heightmap.js  test-image-importer.js  test-input-system.js  test-midi-exporter.js  test-midi-output.js  test-music-mapper.js  test-opfs-store.js  test-runner.html  test-serializer.js  test-svg-exporter.js  test-synth-engine.js  test-text-to-grid.js  test-video-exporter.js  test-webgl2-modules.js  webgl2-test.html
(+48 files in other folders)
