[project]
name = "music2grid"
version = "0.1.0"
description = "Convert MIDI / Audio / Text to GRID Studio format (.grid JSON)"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "basic-pitch>=0.4.0",
    "librosa>=0.10.0",
    "mido>=1.3.3",
    "numpy>=1.20,<2.0",
    "setuptools",
]

[tool.uv]
override-dependencies = [
    "tensorflow-io-gcs-filesystem==0.31.0",
]
